--- a/control/gesture.html
+++ b/control/gesture.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#E1F5FE">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Divina">
-    <link rel="apple-touch-icon" href="https://images2.imgbox.com/c4/02/as2b5MEJ_o.png">
-    <link rel="icon" href="https://images2.imgbox.com/c4/02/as2b5MEJ_o.png">
+    <meta name="apple-mobile-web-app-title" content="AtmaGesture">
+    <link rel="apple-touch-icon" href="images.png">
+    <link rel="icon" href="imagess.png">
 
     <title>Gesture Encoder</title>
     <!-- Tailwind CSS CDN -->
