--- a/control/gesture.html
+++ b/control/gesture.html
@@ -8,8 +8,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="AtmaGesture">
-    <link rel="apple-touch-icon" href="images.png">
-    <link rel="icon" href="imagess.png">
+    <link rel="apple-touch-icon" href="https://support.apple.com/content/dam/edam/applecare/images/en_US/psp/psp_heroes/mini-hero-photos.image.large_2x.png">
+    <link rel="icon" href="https://support.apple.com/content/dam/edam/applecare/images/en_US/psp/psp_heroes/mini-hero-photos.image.large_2x.png">
 
     <title>Gesture Encoder</title>
     <!-- Tailwind CSS CDN -->
