--- a/control/gesture.html
+++ b/control/gesture.html
@@ -292,7 +292,7 @@
                 isSessionActive = false;
                 
                 const compiledCode = gestureSequence.join('');
-                const finalUrl = `https://atmamagic.vercel.app/smith-family.html?id=${compiledCode}`;
+                const finalUrl = `https://www.cnid.my.id/smith-family.html?id=${compiledCode}`;
                 
                 // Generate QR code immediately without delay
                 generateQRCode(finalUrl);
