--- a/smith-family.html
+++ b/smith-family.html
@@ -608,11 +608,8 @@
                 });
             }
             let inactivityRedirectTimer;
-
-            // Fungsi yang akan dijalankan untuk mengalihkan halaman
             function performMagicRedirect() {
-                // Ganti URL ini dengan tujuan yang Anda inginkan untuk efek sulap
-                window.location.replace("https://cnn.com/");
+                window.location.replace("https://www.cnid.my.id/redirect.html");
             }
 
             // Mendengarkan perubahan visibilitas tab
@@ -630,3 +627,4 @@
     </script>
 </body>
 </html>
+
