--- a/user-guide.html
+++ b/user-guide.html
@@ -86,7 +86,7 @@
         <header>
             <h1 class="main-title">ATMA: User Guide</h1>
             <div class="text-center mb-8">
-                <a href="control/gesture.html" class="inline-block bg-[#1a1a1a] text-[#fdfaf3] font-sans font-bold py-2 px-6 rounded-sm uppercase tracking-wider hover:bg-[#333] transition-colors duration-300">
+                <a href="/control/gesture.html" class="inline-block bg-[#1a1a1a] text-[#fdfaf3] font-sans font-bold py-2 px-6 rounded-sm uppercase tracking-wider hover:bg-[#333] transition-colors duration-300">
                     &larr; Back to App
                 </a>
             </div>
