--- a/control/gesture.html
+++ b/control/gesture.html
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 
-                <a href="instructions.html" id="read-instructions-btn" class="font-playfair w-full block bg-gray-700 hover:bg-gray-900 text-[#fdfaf3] p-2 rounded-sm text-center uppercase tracking-wider transition-colors duration-300 mt-6"></a>
+                <a href="user-guide.html" id="read-instructions-btn" class="font-playfair w-full block bg-gray-700 hover:bg-gray-900 text-[#fdfaf3] p-2 rounded-sm text-center uppercase tracking-wider transition-colors duration-300 mt-6"></a>
                 
                 <button id="close-settings" class="font-playfair w-full bg-black hover:bg-gray-800 text-[#fdfaf3] p-2 rounded-sm uppercase tracking-wider transition-colors duration-300 mt-2"></button>
             </div>
