--- a/control/gesture.html
+++ b/control/gesture.html
@@ -631,7 +631,7 @@
         <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/atma/control/service-worker.js')
+                navigator.serviceWorker.register('./service-worker.js')
                     .then(registration => {
                         console.log('Service Worker registered successfully with scope: ', registration.scope);
                     })
