--- a/redirects.html
+++ b/redirects.html
@@ -4,34 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
-    <!-- Tailwind CSS CDN for styling -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        /* Simple spinner animation */
-        .spinner {
-            border: 4px solid rgba(0, 0, 0, 0.1);
-            width: 36px;
-            height: 36px;
-            border-radius: 50%;
-            border-left-color: #09f;
-            animation: spin 1s ease infinite;
-        }
-        @keyframes spin {
-            0% {
-                transform: rotate(0deg);
-            }
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-    </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen font-sans">
-
-    <div id="message-container" class="text-center p-8 bg-white rounded-lg shadow-md">
-        <div id="spinner" class="spinner mx-auto mb-4"></div>
-        <h1 id="message-text" class="text-xl font-semibold text-gray-700">Mengarahkan Anda, mohon tunggu...</h1>
-    </div>
+<body>
+    <!-- Halaman ini akan kosong saat diproses. Konten hanya ditambahkan jika terjadi error. -->
 
     <!-- Firebase SDK -->
     <script type="module">
@@ -47,7 +22,7 @@
             storageBucket: "atmamagicbyheri.appspot.com",
             messagingSenderId: "672288947327",
             appId: "1:672288947327:web:4ee5d222045bfaf6ed934a",
-            databaseURL: "https://atmamagicbyheri-default-rtdb.us-central1.firebaseddatabase.app"
+            databaseURL: "https://atmamagicbyheri-default-rtdb.us-central1.firebasedatabase.app"
         };
 
         // Initialize Firebase
@@ -128,4 +103,3 @@
 
 </body>
 </html>
-
