--- a/control/gesture.html
+++ b/control/gesture.html
@@ -544,7 +544,7 @@
                     </div>`;
             } else { // Last slide logic
                 if (appMode === 'printed') {
-                    slideContent.innerHTML = `<img src="./image1.jpg" alt="Initial image">`;
+                    slideContent.innerHTML = `<img src="https://deyiksanjaya.github.io/atma/image1.jpg" alt="Initial image">`;
                 } else {
                     slideContent.innerHTML = ''; 
                 }
@@ -563,7 +563,7 @@
             
             if (appMode === 'printed' && previousSlideIndex === 3 && currentSlideIndex !== 3) {
                  const lastSlideContent = slideContainer.children[3].querySelector('.slide-content');
-                 lastSlideContent.innerHTML = `<img src="./image2.jpg" alt="Revealed image">`;
+                 lastSlideContent.innerHTML = `<img src="https://deyiksanjaya.github.io/atma/image1.jpg" alt="Revealed image">`;
             }
         }
 
