--- a/user-guide.html
+++ b/user-guide.html
@@ -190,9 +190,15 @@
                 <h2 class="text-3xl mb-4">System Controls & Features</h2>
                 <ul class="list-disc list-inside space-y-3 text-lg">
                     <li><strong>Open Settings:</strong> <span class="key-term">Tap the top-right corner</span> of the screen.</li>
-                    <li><strong>Reset App:</strong> To reset for a new performance, perform a <span class="key-term">quick triple-tap</span> on the final screen (either the QR code or the image). In Printed QR mode, this also clears the data in the database for your ID.</li>
+                    <li><strong>Reset App:</strong> To reset for a new performance, perform a <span class="key-term">quick triple-tap</span> on the final screen (either the QR code or the image). This action prepares the app for a new set of inputs.</li>
                     <li><strong>View Input History:</strong> To confirm your inputs, <span class="key-term">press and hold</span> your finger on the final screen. An overlay showing your registered choices will appear and will vanish when you lift your finger.</li>
                 </ul>
+
+                <h3 class="text-2xl mt-8 mb-4">Security & Plausibility</h3>
+                <p class="mb-4">This feature is designed to protect the method if a spectator becomes suspicious.</p>
+                <p class="text-lg">
+                    At the start of a performance, the app automatically sets your channel's status to "Performing". After the climax, perform a <span class="key-term">quick double-tap</span> on the final image screen. This sets your channel status back to "Not Performing". If the spectator re-scans the printed QR code later, the article will appear in a locked, static state where the cover photo is permanently the one with the empty seat, thus protecting the secret of the real-time update.
+                </p>
             </section>
             
             <div class="section-divider"></div>
