--- a/control/generateqr.html
+++ b/control/generateqr.html
@@ -305,7 +305,7 @@
                 <button id="downloadBtn" class="control-btn">
                     <span id="downloadBtnText"></span>
                 </button>
-                <a href="app.html" id="backToAppBtn" class="control-btn">
+                <a href="gesture.html" id="backToAppBtn" class="control-btn">
                     <span id="backToAppBtnText"></span>
                 </a>
             </div>
